tests/checker/diagnostics/0216_adt_nested_annotation_mismatch_08.ml.infer.expected
File "0216_adt_nested_annotation_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0216_adt_nested_annotation_mismatch_08 is not a valid module name.

File "0216_adt_nested_annotation_mismatch_08.ml", line 2, characters 31-35:
2 | let _ : rec_theta = { score = (true, 7); live = false }
                                   ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
